[tool.poetry]
name = "ytmp3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
youtube_dl = "^2021.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
